# rust.base

./: .gitignore  Cargo.toml  README.md  axum_base.session.sql  cargo.toml
axum_base/: Cargo.toml  Dockerfile  dev.toml  makefile
axum_base/src/: app_state.rs  client.rs  main.rs  oauth2sample.rs  route.rs  sample.rs
axum_base/src/basic/: db.rs  depends.rs  env.rs  error.rs  extract.rs  mod.rs  redis.rs  roundrobin.rs  state.rs  tracing.rs
axum_base/src/internal/: diag.rs  error.rs  mod.rs
axum_base/tests/: client.rs
axumbase/: Cargo.toml  settings.toml
axumbase/src/: app_context.rs  app_error.rs  database.rs  extract_ext.rs  logging.rs  main.rs  redis.rs  route_sample.rs  settings.rs  utoipa_sample.rs
axumbase/src/route/: basic_utoipa.rs  mod.rs
axumbase/src/routes/: basic_database.rs  basic_sample.rs  basic_utoipa.rs  mod.rs
cmd/tonic_gprc/: Cargo.toml  build.rs
examples/axum_base/: Cargo.toml  test.http
examples/axum_base/src/: error.rs  main.rs
examples/tonic_grpc/: Cargo.toml
examples/tonic_grpc/src/: client.rs  server.rs
hello/: Cargo.toml
hello/src/: async_runtime.rs  blanket_implementation.rs  hello_async_trait.rs  hello_pin.rs  hello_tower.rs  hello_tower_0.rs  hello_tower_http.rs  hello_tower_service.rs  hi_anyhow.rs  hi_hyper.rs  hi_thiserror.rs  hi_tokio_echo.rs  main.rs
hello_hyper/: Cargo.toml
hello_hyper/src/: main.rs
