[package]
name = "axumbase"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3" }
config = "0.15.11"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
anyhow = "1.0.97"
serde_json = "1.0.140"
axum-extra = "0.10.1"
tracing = "0.1.41"
tracing-appender = "0.2.3"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipauto = "0.2.0"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-native-tls", "postgres", "sqlite"] }

[features]
default = ["sqlite"]
sqlite = []
postgres = []