[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
thiserror = "2.0.3"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["full"] }
hyper = { version = "1.5.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["full"] }
http-body-util = "0.1.2"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["full"] }
