[package]
name = "hello_hyper"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.2"
error-stack = "0.5.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.9", features = ["tokio"] }
tokio = { version = "1.40.0", features = ["full"] }
