[package]
name = "axum_base"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "macros", "multipart", "ws"] }
hyper = "1.4.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full", "tracing"] }
tower = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
