[package]
name = "tonic_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tower = { version = "0.4.13", features = ["full"] }
prost = "0.13.1"
tokio = { version = "1", features = ["full"] }
tonic = "0.12.1"

[build-dependencies]
tonic-build = "0.12.1"

[[bin]]
name="server"
path="src/server.rs"

[[bin]]
name="client"
path="src/client.rs"
